[package]
name = "olympia-gui"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.31.1"
egui = "0.31.1"
egui-file-dialog = "0.9.0"

egui_graphs =  {git = "https://github.com/blitzarx1/egui_graphs.git"}
petgraph = { version = "0.8", features = ["rayon"] }
olympia_core = {path = "../olympia-core"}
